# Glimpse-Speech

./: .gitignore  Cargo.toml  README.md
examples/: parakeet.rs  whisper.rs  whisperfile.rs
src/: audio.rs  lib.rs
src/engines/: fluid.rs  mod.rs  parakeet.rs  whisper.rs  whisperfile.rs
swift-bridge/: Package.resolved  Package.swift
swift-bridge/Sources/GlimpseSpeechFluidBridge/: BridgeSupport.swift  CABI.swift  FluidFacade.swift
swift-bridge/Tests/GlimpseSpeechFluidBridgeTests/: ErrorMappingTests.swift  FluidFacadeHelpersTests.swift  ModelPathsTests.swift  SerializationTests.swift
tests/: audio.rs  parakeet.rs  whisperfile.rs
